[package]
name = "nordan-overlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nordan_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Removed the window-transparent feature because Tauri v2 handles it natively!
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🛠️ PRO FIX: Windows Specific Dependencies
# This allows Rust to natively talk to the Windows OS to open the memory map 
# our C++ DLL created, without cross-platform compiling errors.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
] }
